Bug 1607088 [Wayland] Request mShell window repaint instead of direct commit to wl_surface, r=heftig

Differential Revision: https://phabricator.services.mozilla.com/D58863